--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>News homepage | davigzola</title>
 
-  <link rel="stylesheet" href="./CSS/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -18,10 +18,10 @@
 <body>
   <header>
     <div id="page-logo">
-      <img src="./IMAGES/logo.svg">
+      <img src="./images/logo.svg">
     </div>
     <button id="open-menu" class="hidden">
-      <img src="./IMAGES/icon-menu.svg">
+      <img src="./images/icon-menu.svg">
     </button>
     <button id="close-menu" class="hidden">
       <img src="./images/icon-menu-close.svg">
@@ -39,8 +39,8 @@
   <main>
     <section id="first-section">
         <picture id="picture-first-section">
-          <source media="(min-width: 780px)" srcset="./IMAGES/image-web-3-desktop.jpg">
-          <img src="./IMAGES/image-web-3-mobile.jpg">
+          <source media="(min-width: 780px)" srcset="./images/image-web-3-desktop.jpg">
+          <img src="./images/image-web-3-mobile.jpg">
         </picture>
       <div id="first-section-text">
         <h1>The Bright Future of Web 3.0?</h1>
@@ -68,7 +68,7 @@
     </section>
     <section id="second-section">
       <article class="second-section-article">
-        <img src="./IMAGES/image-retro-pcs.jpg">
+        <img src="./images/image-retro-pcs.jpg">
         <div>
           <span>01</span>
           <h4><a href="">Reviving Retro PCs</a></h4>
@@ -76,7 +76,7 @@
         </div>
       </article>
       <article class="second-section-article">
-        <img src="./IMAGES/image-top-laptops.jpg">
+        <img src="./images/image-top-laptops.jpg">
         <div>
           <span>02</span>
           <h4><a href="">Top 10 Laptops of 2022</a></h4>
@@ -84,7 +84,7 @@
         </div>
       </article>
       <article class="second-section-article">
-        <img src="./IMAGES/image-gaming-growth.jpg">
+        <img src="./images/image-gaming-growth.jpg">
         <div>
           <span>03</span>
           <h4><a href="">The Growth of Gaming</a></h4>
